--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
+    "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
     "react-redux": "^8.0.2",
     "react-redux-form": "^1.16.14",
-    "react-router-dom": "^6.3.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "reactstrap": "^9.1.4",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
