--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.0",
+    "bootstrap": "^5.2.1",
     "bootstrap-social": "^5.1.1",
     "cross-fetch": "^3.1.5",
     "font-awesome": "^4.7.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-animation-components": "^3.0.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-popper": "^2.3.0",
     "react-redux": "^8.0.2",
